log
Mon 26 Sep 2022 12:11:45 AM UTC: 
 tests:  1|8
total_score: 0/70
244ff85
Mon 26 Sep 2022 12:15:25 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
50ed80a
Mon 26 Sep 2022 12:16:04 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
07fa66d
Mon 26 Sep 2022 12:17:32 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: ‘key’ undeclared (first use in this function)
   43 |   new->pair->key = key;
      |                    ^~~
treemap.c:43:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:22: error: ‘value’ undeclared (first use in this function)
   44 |   new->pair->value = value;
      |                      ^~~~~
treemap.c:46:10: error: returning ‘TreeNode *’ from a function with incompatible return type ‘TreeMap *’ [-Werror=incompatible-pointer-types]
   46 |   return new;
      |          ^~~
treemap.c:41:10: error: unused variable ‘pair’ [-Werror=unused-variable]
   41 |   Pair * pair = (Pair*) malloc (sizeof(Pair));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
8de1377
Mon 26 Sep 2022 12:19:03 AM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  4|7
total_score: 5/70
1062f3b
Mon 26 Sep 2022 12:26:02 AM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:36: error: ‘TreeNode’ has no member named ‘value’
   79 |     if(is_equal(tree, tree->current->value, key)==1)
      |                                    ^~
treemap.c:80:27: error: ‘TreeNode’ has no member named ‘key’
   80 |       return tree->current->key;
      |                           ^~
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(tree->lower_than(tree->current->key, key)==1)
      |                                           ^~
treemap.c:82:43: error: expected ‘;’ before ‘:’ token
   82 |       tree->current = tree->current->right:
      |                                           ^
      |                                           ;
Compilation failed
7021060
Mon 26 Sep 2022 12:26:21 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:36: error: ‘TreeNode’ has no member named ‘key’
   79 |     if(is_equal(tree, tree->current->key, key)==1)
      |                                    ^~
treemap.c:80:27: error: ‘TreeNode’ has no member named ‘value’
   80 |       return tree->current->value;
      |                           ^~
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(tree->lower_than(tree->current->key, key)==1)
      |                                           ^~
treemap.c:82:43: error: expected ‘;’ before ‘:’ token
   82 |       tree->current = tree->current->right:
      |                                           ^
      |                                           ;
Compilation failed
177e2a6
Mon 26 Sep 2022 12:27:13 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:36: error: ‘TreeNode’ has no member named ‘key’
   79 |     if(is_equal(tree, tree->current->key, key) ==1)
      |                                    ^~
treemap.c:80:27: error: ‘TreeNode’ has no member named ‘value’
   80 |       return tree->current->value;
      |                           ^~
treemap.c:81:43: error: ‘TreeNode’ has no member named ‘key’
   81 |     else if(tree->lower_than(tree->current->key, key) ==1)
      |                                           ^~
Compilation failed
6307f36
Mon 26 Sep 2022 12:29:13 AM UTC: 
 treemap.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:83:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   83 |       if(is_equal(tree, newNodo->pair->key, key) == 1)
      |       ^~
treemap.c:85:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   85 |         return (newNodo->pair);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
da07c64
Mon 26 Sep 2022 12:29:27 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e2d20c5
Mon 26 Sep 2022 12:40:44 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:3: error: ‘newNode’ undeclared (first use in this function); did you mean ‘newNodo’?
   58 |   newNode->parent = nodoAux;
      |   ^~~~~~~
      |   newNodo
treemap.c:58:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:53:13: error: unused variable ‘newNodo’ [-Werror=unused-variable]
   53 |   TreeNode *newNodo = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc0fd56
Mon 26 Sep 2022 12:41:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b5acb12
